小型学生信息管理

--- a/BackstageExample2/src/main/webapp/register.html
+++ b/BackstageExample2/src/main/webapp/register.html
@@ -7,14 +7,13 @@
        <style>
         @import url("css/注册界面.css");
         @import url("css/弹出div.css");
-        @import url("css/MyTable.css");
        </style>
        <script src="js/jquery-1.8.3.js"></script>
        <script src="js/界面jquery.js"></script>
-       <script src="js/MyTable.js"></script>
        <script src="js/注册界面验证.js"></script>
        <script src="js/地址日期联动.js"></script>
        <script src="js/弹出div.js"></script>
+       <script src="js/jsTools.js"></script>
    </head>
    <body onload="setup()">
         <!-- 总盒子 -->
