--- a/BackstageExample2/src/main/webapp/select.html
+++ b/BackstageExample2/src/main/webapp/select.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <title>查询学生</title>
     <style>@import url("css/select.css");</style>
-    <style>@import url("css/MyTable.css");</style>
     <script src="js/jquery-1.8.3.js"></script>
     <script src="js/select.js"></script>
 </head>
@@ -24,5 +23,5 @@
     </div>
 </div>
 </body>
-<script src="js/MyTable.js"></script>
+<script src="js/jsTools.js"></script>
 </html>
